--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <div class="col">
             <div>
                 <h1 style="text-align: center;font-family: Lobster, cursive;color: rgb(255,255,255);">Welcome to CreptoArtFes</h1>
-                <p style="color: rgb(255,255,255);text-align: center;">このサイトではCryptoArtFesの来場記念NFTを配布しています。<br>美術展の入場チケットを手元に置いて思い出にするように、<br>ここに来た『記念』をNFTとして所有することができます。<br>システム開発：@NandemoToken</p>
+                <p style="color: rgb(255,255,255);text-align: center;">このサイトではCryptoArtFesの来場記念NFTを配布しています。<br>美術展の入場チケットを大切に保存するのと同じように、<br>ここに来た『記念』をNFTとして所有することができます。<br>システム開発：@NandemoToken</p>
             </div>
         </div>
     </div>
