--- a/index.html
+++ b/index.html
@@ -19,12 +19,12 @@
 <body>
     <div class="row">
         <div class="col" style="background: #000000;">
-            <h1 style="text-align: center;font-family: 'Abril Fatface', cursive;color: rgb(47,203,255);"><strong>CryptoArtFes visitor NFT</strong><br></h1>
+            <h1 style="text-align: center;font-family: 'Abril Fatface', cursive;color: rgb(47,203,255);"><strong>CryptoArtFes Visitor NFT</strong><br></h1>
         </div>
     </div>
     <div class="row" style="background: radial-gradient(rgb(79,73,81) 0%, rgb(0,0,0) 80%);">
         <div class="col">
-            <div style="text-align: center;"><img src="assets/img/VisitorNFT.png" style="width: 300px;"></div>
+            <div style="text-align: center;"><img src="assets/img/Ticket.png" style="width: 300px;"></div>
         </div>
     </div>
     <div class="modal fade" role="dialog" tabindex="-1" id="wallet-popup">
@@ -47,8 +47,8 @@
     <div class="row" style="background: #000000;">
         <div class="col">
             <div>
-                <h1 style="text-align: center;font-family: Lobster, cursive;color: rgb(255,255,255);">Welcome to CreptoArtFes</h1>
-                <p style="color: rgb(255,255,255);text-align: center;">このサイトではCryptoArtFesの来場記念NFTを配布しています。<br>美術展の入場チケットを大切に保存するのと同じように、<br>ここに来た『記念』をNFTとして所有することができます。<br>システム開発：@NandemoToken</p>
+                <h2 style="text-align: center;font-family: Aclonica, sans-serif;color: rgb(255,255,255);">Visitor Ticket</h2>
+                <p style="color: rgb(255,255,255);text-align: center;">このサイトではCryptoArtFesの来場記念NFTを配布しています。<br>美術展の入場チケットを大切に保存するのと同じで、<br>ここに来た『記念』をNFTとして所有することができます。<br>イラスト：@pippy_holygrail　システム開発：@NandemoToken</p>
             </div>
         </div>
     </div>
